--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                 <div class="sec">
                     <a href="https://github.com/SusovanGit10"><i class='bx bxl-github'></i></a>
                     <a href="https://www.linkedin.com/in/susovan-hati-a37178271"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://twitter.com/yourprofile"><i class='bx bxl-twitter'></i></a>
-                    <a href="https://instagram.com/yourprofile"><i class='bx bxl-instagram-alt'></i></a>
+                    <a href="https://www.facebook.com/share/1GPCz3WGTA/"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://www.instagram.com/the_spiritual_phoenix?igsh=MTlkdmhhZjZrdDVt"><i class='bx bxl-instagram-alt'></i></a>
                 </div>
             </div>
             <div class="footer">
@@ -216,3 +216,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
