--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                 <div class="sec">
                     <a href="https://github.com/SusovanGit10"><i class='bx bxl-github'></i></a>
                     <a href="https://www.linkedin.com/in/susovan-hati-a37178271"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.facebook.com/share/1GPCz3WGTA/"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://www.instagram.com/the_spiritual_phoenix?igsh=MTlkdmhhZjZrdDVt"><i class='bx bxl-instagram-alt'></i></a>
                 </div>
             </div>
         </div>
@@ -216,4 +218,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
