--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <span style="--i:5;" data-text="Software Engineer">Software Engineer</span>
                 <span style="--i:4;" data-text="Machine Learning Enthusiast">Machine Learning Enthusiast</span>
                 <span style="--i:3;" data-text="Coder">Coder</span>
-                <span style="--i:2;" data-text="Learner">Learner</span>
-                <span style="--i:1;" data-text="Executer">Executer</span>
+                <span style="--i:2;" data-text=",Learner">,Learner</span>
+                <span style="--i:1;" data-text=",Executer">,Executer</span>
             </h2>
             <p>A Frontend Developer having experience of building <br> websites with HTML, CSS, JavaScript, React, Node.js, and other libraries and frameworks. Also I am developing skills on machine learning & data science as an ML Enthusiast</p>
             <div class="btn-sec">
@@ -218,4 +218,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
