--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <h1>Hi <span>e</span>veryone, <span>I</span>'m <span>S</span>usovan</h1>
             <br>
             <h2> I am a
-                <span style="--i:6;" data-text="Frontend Developer">Frontend Developer</span>
-                <span style="--i:5;" data-text="Software Engineer">Software Engineer</span>
+                <span style="--i:6;" data-text="Frontend Developer,">Frontend Developer</span>
+                <span style="--i:5;" data-text="Software Engineer,">Software Engineer</span>
                 <span style="--i:4;" data-text="Machine Learning Enthusiast">Machine Learning Enthusiast</span>
                 <span style="--i:3;" data-text="Coder">Coder</span>
-                <span style="--i:2;" data-text=",Learner">,Learner</span>
-                <span style="--i:1;" data-text=",Executer">,Executer</span>
+                <span style="--i:2;" data-text="Learner">Learner</span>
+                <span style="--i:1;" data-text="Executer">Executer</span>
             </h2>
             <p>A Frontend Developer having experience of building <br> websites with HTML, CSS, JavaScript, React, Node.js, and other libraries and frameworks. Also I am developing skills on machine learning & data science as an ML Enthusiast</p>
             <div class="btn-sec">
@@ -48,7 +48,7 @@
                 <div class="sec">
                     <a href="https://github.com/SusovanGit10"><i class='bx bxl-github'></i></a>
                     <a href="https://www.linkedin.com/in/susovan-hati-a37178271"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://www.facebook.com/share/1GPCz3WGTA/"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://www.facebook.com/share/15v2njBH1f/"><i class='bx bxl-facebook'></i></a>
                     <a href="https://www.instagram.com/the_spiritual_phoenix?igsh=MTlkdmhhZjZrdDVt"><i class='bx bxl-instagram-alt'></i></a>
                 </div>
             </div>
@@ -130,9 +130,9 @@
                 <div class="skill-box">
                     <div class="skill-title">
                         <div class="imge">
-                            <img src="languages.jpg" alt="C/C++/Python logo">
+                            <img src="languages.jpg" alt="C/C++ logo">
                         </div>
-                        <h3>C/C++/Python</h3>
+                        <h3>C/C++</h3>
                     </div>
                     <p> Skilled in C and C++, building efficient algorithms, data structures, and system-level programs.
                         Skilled in Python for scripting, automation, and developing scalable applications with clean, readable code.</p>
@@ -205,12 +205,12 @@
                 <div class="sec">
                     <a href="https://github.com/SusovanGit10"><i class='bx bxl-github'></i></a>
                     <a href="https://www.linkedin.com/in/susovan-hati-a37178271"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://www.facebook.com/share/1GPCz3WGTA/"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://www.facebook.com/share/15v2njBH1f/"><i class='bx bxl-facebook'></i></a>
                     <a href="https://www.instagram.com/the_spiritual_phoenix?igsh=MTlkdmhhZjZrdDVt"><i class='bx bxl-instagram-alt'></i></a>
                 </div>
             </div>
             <div class="footer">
-                <p>Copyright &copy;2025 : Designed by<span class="designer"> Susovan </span></p>
+                <p>Copyright &copy;2025 : Designed & Developed by<span class="designer"> Susovan </span></p>
             </div>
         </div>
     </section>
@@ -218,5 +218,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
