--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <h1>Hi <span>e</span>veryone, <span>I</span>'m <span>S</span>usovan</h1>
             <br>
             <h2> I am a
-                <span style="--i:6;" data-text="Frontend Developer,">Frontend Developer</span>
-                <span style="--i:5;" data-text="Software Engineer,">Software Engineer</span>
+                <span style="--i:6;" data-text="Frontend Developer,">Frontend Developer,</span>
+                <span style="--i:5;" data-text="Software Engineer,">Software Engineer,</span>
                 <span style="--i:4;" data-text="Machine Learning Enthusiast">Machine Learning Enthusiast</span>
                 <span style="--i:3;" data-text="Coder">Coder</span>
                 <span style="--i:2;" data-text="Learner">Learner</span>
@@ -218,3 +218,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
