--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                 <div class="skill-box">
                     <div class="skill-title">
                         <div class="imge">
-                            <img src="languages.jpg" alt="C/C++ logo">
+                            <img src="languages.jpg" alt="C/C++/Python logo">
                         </div>
-                        <h3>C/C++</h3>
+                        <h3>C/C++/Python</h3>
                     </div>
                     <p> Skilled in C and C++, building efficient algorithms, data structures, and system-level programs.
                         Skilled in Python for scripting, automation, and developing scalable applications with clean, readable code.</p>
@@ -218,4 +218,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
